--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>Vite + React</title>
+    <title>Frontend Mentor | Multi-step form</title>
   </head>
   <body>
     <div id="root"></div>
