add structure and styles

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <title>Frontend Mentor | Multi-step form</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div
+      class="md:bg-magnolia md:h-screen md:flex md:justify-center md:items-center"
+      id="root"
+    ></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
